RESOLVED FIXED 252636
Regression(252852@main) Games on kongregate.com are no longer loading
https://bugs.webkit.org/show_bug.cgi?id=252636
Summary Regression(252852@main) Games on kongregate.com are no longer loading
Chris Dumez
Reported 2023-02-20 16:58:40 PST
Games on kongregate.com are no longer loading after 252852@main.
Attachments
Chris Dumez
Comment 1 2023-02-20 16:58:54 PST
Chris Dumez
Comment 2 2023-02-20 17:04:24 PST
EWS
Comment 3 2023-02-21 07:33:19 PST
Committed 260612@main (b57dc1f8ff99): <https://commits.webkit.org/260612@main> Reviewed commits have been landed. Closing PR #10414 and removing active labels.
Chris Dumez
Comment 4 2023-02-28 18:54:30 PST
*** Bug 252740 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.